--- a/src/main/resources/templates/cypher/list.html
+++ b/src/main/resources/templates/cypher/list.html
@@ -26,13 +26,16 @@
             <tr>
                 <th>Id</th>
                 <th>Jméno</th>
-                <th>Poradi</th>
-                <th>Souradnice</th>
+                <th>Pořadí</th>
+                <th>Souřadnice</th>
+                <th>Popis místa</th>
                 <th>Odpověď</th>
+                <th>Špatná odpověď</th>
+                <th>Bonus</th>
                 <td align="center">Akce</td>
             </tr>
             <tr th:if="${cyphers.empty}">
-                <td colspan="6"><p> V systému nejsou šifry</p></td>
+                <td colspan="9"><p> V systému nejsou šifry</p></td>
             </tr>
             </thead>
             <tbody>
@@ -41,7 +44,10 @@
                 <td th:text="${cypher.name}">Jmeno</td>
                 <td th:text="${cypher.stage}" align="center">Cislo</td>
                 <td th:text="${cypher.location}">X, Y</td>
+                <td th:text="${cypher.placeDescription}">Popis mista</td>
                 <td th:text="${cypher.codeword}">codove slovo</td>
+                <td th:text="${cypher.trapCodeword}">Past</td>
+                <td th:text="${cypher.bonusContent}">Bonus</td>
                 <td align="center">
                     <a href="#" th:href="@{/admin/hint(cypherId=${cypher.cypherId})}">Detail</a> |
                     <a href="#" th:href="@{/admin/cypher/update/{cypherId}(cypherId=${cypher.cypherId})}">Upravit</a> |
@@ -50,7 +56,7 @@
             </tr>
 
             <tr>
-                <td colspan="6" align="center">
+                <td colspan="9" align="center">
                     <a href="#" th:href="@{/admin/cypher/add}">Přidat</a>
                 </td>
 
