Fix - GPRS to GPS

--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -104,7 +104,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <h2>Adresa</h2>
-                <p th:text="${'GPRS: ' + cypher.location.y + ' ' + cypher.location.x}"></p>
+                <p th:text="${'GPS: ' + cypher.location.y + ' ' + cypher.location.x}"></p>
                 <p th:text="${cypher.placeDescription}"></p>
                 <div id="map" style='width: 100%; height: 150px;'></div>
                 <a th:href="@{https://www.google.com/maps/search/?api=1&query={lat},{lng}(lat=${cypher.location.y}, lng=${cypher.location.x})}"
