--- a/src/main/resources/templates/hint/detail.html
+++ b/src/main/resources/templates/hint/detail.html
@@ -25,7 +25,7 @@
                 </tr>
                 <tr>
                     <td>Text</td>
-                    <td><input type="text" th:field="*{text}"/></td>
+                    <td><textarea th:field="*{text}"></textarea></td>
                 </tr>
                 <tr>
                     <td>Hodnota</td>
