--- a/src/main/resources/templates/client/hint/list.html
+++ b/src/main/resources/templates/client/hint/list.html
@@ -1,95 +1,80 @@
 <!DOCTYPE html>
 <html lang="cs" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta charset="UTF-8">
 
     <title>Nápověda</title>
 </head>
 <body>
-    <nav class="navbar navbar-default navbarRed" >
-        <div class="navbarContentCentered">
-            <p class="bold floatLeft" th:text="${team.name}"></p>
-            <p class="floatLeft">Body:xx b</p>
-        </div>
-        <button id="navbarButton" class="btn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1"
-                aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"><span class="dark-blue-text">
-                    <i class="fa fa-bars"></i></span>
-        </button>
-        <div class="collapse navbar-collapse collapsedNavbar" id="navbarSupportedContent1">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item collapsedNotActive">
-                    <a class=" nav-link" href="#">Šifry </a>
-                </li>
-                <div class="dropdown-divider-cst"></div>
-                <li class="nav-item collapsedNotActive">
-                    <a class=" nav-link" href="#">Kartička</a>
-                </li>
-                <div class="dropdown-divider-cst"></div>
-                <li class="nav-item collapsedNotActive">
-                    <a class=" nav-link" href="#">Kontakty</a>
-                </li>
-                <div class="dropdown-divider-cst"></div>
-                <li class="nav-item collapsedNotActive">
-                    <a class=" nav-link" href="#">Odhlásit se</a>
-                </li>
-                <div class="dropdown-divider-cst"></div>
-            </ul>
-        </div>
-    </nav>
-    <div class="bodyContent ">
-        <h2>Odemknuté nápovědy</h2>
+    <div th:insert="client/fragments/header :: header(cypher)"></div>
 
-        <th:block th:if="${not #lists.isEmpty(hintsTaken)}">
-            <div th:each="hintTaken : ${hintsTaken}">
-                <p th:text="|Nápověda (-${hintTaken.hint.value} b.): ${hintTaken.hint.text}|"></p>
+    <div class="container">
+
+        <div class="row">
+            <div class="col-sm-12">
+                <h1>Nápověda</h1>
+
+                <h2>Odemknuté nápovědy</h2>
+
+                <th:block th:if="${not #lists.isEmpty(hintsTaken)}">
+                    <div th:each="hintTaken : ${hintsTaken}">
+                        <p>
+                            <span class="hint-label" th:text="|Nápověda (-${hintTaken.hint.value}b.):|"></span>
+                            <span th:text="${hintTaken.hint.text}"></span>
+                        </p>
+                    </div>
+                </th:block>
+                <th:block th:if="${#lists.isEmpty(hintsTaken)}">
+                    <p>Zatím jste neodemkli žádné nápovědy.</p>
+                </th:block>
             </div>
-        </th:block>
-        <th:block th:if="${#lists.isEmpty(hintsTaken)}">
-            <p>Zatím jste neodemkli žádné nápovědy.</p>
-        </th:block>
-
-        <h2>Zamknuté nápovědy</h2>
-
-        <th:block th:if="${#lists.isEmpty(hintsNotTaken)}">
-            <p>Žádnou nápovědu už nedostanete.</p>
-        </th:block>
-
-        <div th:each="hint : ${hintsNotTaken}">
-            <a onclick="return confirm('Opravdu si chcete vzít tuto nápovědu?')">
-                <form th:action="@{'/cypher/takeHint/' + ${hint.hintId}}" th:object="${cypher}" method="post">
-                    <input type="hidden"  th:field="*{cypherId}" />
-                    <input type="hidden"  th:field="*{hints}" />
-                    <input type="hidden"  th:field="*{name}" />
-                    <input type="hidden"  th:field="*{stage}" />
-                    <input type="hidden"  th:field="*{placeDescription}" />
-                    <input type="hidden"  th:field="*{location}" />
-                    <input type="hidden"  th:field="*{codeword}" />
-                    <input type="hidden"  th:field="*{bonusContent}" />
-                    <th:block th:if="${hint.value &lt 5}">
-                        <button type="submit" class="btn-white"
-                                th:text="'Získat nápovědu (-' + ${hint.value} + ' body)'"></button>
-                    </th:block>
-                    <th:block th:if="${hint.value &gt 4}">
-                        <button type="submit" class="btn-white"
-                                th:text="'Získat nápovědu (-' + ${hint.value} + ' bodů)'"></button>
-                    </th:block>
-                    <th:block th:if="${hint.value == 1}">
-                        <button type="submit" class="btn-white"
-                                th:text="'Získat nápovědu (-' + ${hint.value} + ' bod)'"></button>
-                    </th:block>
-                </form>
-            </a>
         </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <h2>Zamknuté nápovědy</h2>
 
+                <th:block th:if="${#lists.isEmpty(hintsNotTaken)}">
+                    <p>Žádné další nápovědy nejsou k dispozici.</p>
+                </th:block>
+
+                <div th:each="hint : ${hintsNotTaken}">
+                    <a onclick="return confirm('Opravdu si chcete vzít tuto nápovědu?')">
+                        <form th:action="@{'/cypher/takeHint/' + ${hint.hintId}}" th:object="${cypher}" method="post">
+                            <input type="hidden"  th:field="*{cypherId}" />
+                            <input type="hidden"  th:field="*{hints}" />
+                            <input type="hidden"  th:field="*{name}" />
+                            <input type="hidden"  th:field="*{stage}" />
+                            <input type="hidden"  th:field="*{placeDescription}" />
+                            <input type="hidden"  th:field="*{location}" />
+                            <input type="hidden"  th:field="*{codeword}" />
+                            <input type="hidden"  th:field="*{bonusContent}" />
+
+                            <th:block th:if="${hint.value == 1}">
+                                <button type="submit" class="btn btn-primary"
+                                        th:text="'Získat nápovědu (-' + ${hint.value} + ' bod)'"></button>
+                            </th:block>
+                            <th:block th:if="${hint.value le 4 and hint.value gt 1}">
+                                <button type="submit" class="btn btn-primary"
+                                        th:text="'Získat nápovědu (-' + ${hint.value} + ' body)'"></button>
+                            </th:block>
+                            <th:block th:if="${hint.value gt 4}">
+                                <button type="submit" class="btn btn-primary"
+                                        th:text="'Získat nápovědu (-' + ${hint.value} + ' bodů)'"></button>
+                            </th:block>
+                        </form>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
