--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -21,6 +21,9 @@
                     <li class="nav-item" th:class="${activeTab == 'finalplace'}? 'active' : null">
                         <a class="nav-link" href="/admin/finalplace/">Místo zakončení</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/?logout">Odhlásit se</a>
+                    </li>
                 </ul>
             </div>
         </div>
