--- a/src/main/resources/templates/finalplace/form.html
+++ b/src/main/resources/templates/finalplace/form.html
@@ -26,7 +26,7 @@
     </div>
     <div class="row">
         <div class="col-sm-6">
-            <form action="#" th:action="@{/admin/finalplace/update}" th:object="${finalplace}" method="post">
+            <form action="#" th:action="@{/admin/finalplace/update}" th:object="${finalPlace}" method="post">
                 <div class="form-group">
                     <label for="finalPlaceId">Id</label>
                     <input id="finalPlaceId" class="form-control" th:field="*{finalPlaceId}" readonly/>
@@ -38,7 +38,7 @@
                 </div>
                 <div class="form-group">
                     <label for="location">Souřadnice</label>
-                    <input id="location" class="form-control" type="text" th:field="*{location}" readonly/>
+                    <input id="location" class="form-control" type="text" th:field="*{location}"/>
                     <small id="locationHelp" class="form-text text-muted">Kliknutím do mapy nastavíte souřadnice.</small>
                     <p class="error" th:if="${#fields.hasErrors('location')}" th:errors="*{location}">Location error.</p>
                 </div>
