--- a/src/main/resources/templates/hint/detail.html
+++ b/src/main/resources/templates/hint/detail.html
@@ -1,44 +1,51 @@
 <!DOCTYPE html>
-<html lang="cz"
+<html lang="cs"
       xmlns:th="http://www.springframework.org/schema/data/jaxb">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../static/css/style.css" th:href="@{/css/style.css}"/>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
     <title>HintDetail</title>
 </head>
 <body>
+<div th:insert="fragments/header :: header(cypher)"></div>
 <div class="container">
-    <h2><span th:text="${heading}">Nadpis</span></h2>
-    <form action="#" th:action="@{/admin/hint/add}" th:object="${hint}" method="post">
-        <div class="table-responsive">
-            <table class="table" style="font-size: 18px">
-                <tr>
-                    <td>Cypher Id</td>
-                    <td><input type="number" th:field="*{cypher.cypherId}" readonly/></td>
-                </tr>
-                <tr>
-                    <td>Hint Id</td>
-                    <td><input type="number" th:field="*{hintId}" readonly/></td>
-                </tr>
-                <tr>
-                    <td>Text</td>
-                    <td><textarea th:field="*{text}"></textarea></td>
-                </tr>
-                <tr>
-                    <td>Hodnota</td>
-                    <td><input type="number" th:field="*{value}"/></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><input type="submit" value="Uložit"/>
-                    </td>
-                </tr>
-            </table>
+    <div class="row">
+        <div class="col-sm-12">
+            <h2><span th:text="${heading}">Nadpis</span></h2>
         </div>
-    </form>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <form action="#" th:action="@{/admin/hint/save}" th:object="${hint}" method="post">
+                <div class="form-group">
+                    <label for="cypherId">Cypher ID</label>
+                    <input id="cypherId" type="number" class="form-control" th:field="*{cypher.cypherId}" readonly/>
+                </div>
+                <div class="form-group">
+                    <label for="hintId">Hint ID</label>
+                    <input id="hintId" type="number" class="form-control" th:field="*{hintId}" readonly/>
+                </div>
+                <div class="form-group">
+                    <label for="text">Text</label>
+                    <textarea id="text" class="form-control" th:field="*{text}"/>
+                    <p class="error" th:if="${#fields.hasErrors('text')}" th:errors="*{text}">Text error.</p>
+                </div>
+                <div class="form-group">
+                    <label for="value">Hodnota</label>
+                    <input id="value" class="form-control" type="number" th:field="*{value}"/>
+                </div>
+                <button type="submit" class="btn btn-primary">Uložit</button>
+            </form>
+        </div>
+    </div>
 </div>
 </body>
 </html>
