upraveno typo - dropdown-toggle, pridan btn-primary upraveno finalPlace zobrazeni mapy

--- a/src/main/resources/templates/cypher/list.html
+++ b/src/main/resources/templates/cypher/list.html
@@ -51,7 +51,7 @@
                 <td th:text="${cypher.trapCodeword}">Past</td>
                 <td th:text="${cypher.bonusContent}">Bonus</td>
                 <td align="center">
-                    <button class="btn dropdown-togle" type="button" data-toggle="dropdown">Akce
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Akce
                         <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu">
