--- a/src/main/resources/templates/hint/list.html
+++ b/src/main/resources/templates/hint/list.html
@@ -66,7 +66,7 @@
                 <td th:text="${hint.text}">text</td>
                 <td th:text="${hint.value}">value</td>
                 <td align="center">
-                    <button class="btn dropdown-togle" type="button" data-toggle="dropdown">Akce
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Akce
                         <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu">
