--- a/src/main/resources/templates/team/main.html
+++ b/src/main/resources/templates/team/main.html
@@ -66,7 +66,7 @@
                                 <td th:text="${team.numOfMembers}">8</td>
                                 <td th:text="${team.pin}">9876</td>
                                 <td>
-                                    <button class="btn dropdown-togle" type="button" data-toggle="dropdown">Akce
+                                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Akce
                                         <span class="caret"></span>
                                     </button>
                                     <ul class="dropdown-menu">
