pridan potvrzovaci dialog pri zmene stavu sifry (organizer) pridan potvrzovaci dialog pri odhlaseni

--- a/src/main/resources/templates/client/fragments/header.html
+++ b/src/main/resources/templates/client/fragments/header.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="/contact">Kontakty</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/logout">Odhlásit se</a>
+                    <a class="nav-link" href="/logout" th:onclick="return confirm('Opravdu se chcete odhlásit?')">Odhlásit se</a>
                 </li>
             </ul>
         </div>
