--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -22,7 +22,7 @@
                         <a class="nav-link" href="/admin/finalplace/">Místo zakončení</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/logout">Odhlásit se</a>
+                        <a class="nav-link" href="/logout" th:onclick="return confirm('Opravdu se chcete odhlásit?')">Odhlásit se</a>
                     </li>
                 </ul>
             </div>
