--- a/src/main/resources/templates/progress/getHintList.html
+++ b/src/main/resources/templates/progress/getHintList.html
@@ -101,7 +101,7 @@
 
     <form action="/logout" method="post">
         <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
-        <button type="submit" th:onclick="return confirm('Opravdu se chcete odhlásit?')">Odhlásit</button>
+        <button type="submit">Odhlásit</button>
     </form>
 </div>
 
