--- a/src/main/resources/templates/progress/list.html
+++ b/src/main/resources/templates/progress/list.html
@@ -43,7 +43,7 @@
     </div>
     <form action="/logout" method="post">
         <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
-        <button type="submit" th:onclick="return confirm('Opravdu se chcete odhlásit?')">Odhlásit</button>
+        <button type="submit">Odhlásit</button>
     </form>
 </div>
 </body>
